--- a/package.json
+++ b/package.json
@@ -37,9 +37,13 @@
     ]
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query": "^4.32.5",
+    "@tanstack/react-query-devtools": "^4.32.5",
     "axios": "^1.4.0",
     "json-server": "^0.17.3",
-    "react-icons": "^4.10.1"
+    "react-icons": "^4.10.1",
+    "react-redux": "^8.1.2",
+    "react-router-dom": "^6.14.2"
   }
 }
