--- a/package.json
+++ b/package.json
@@ -3,12 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@popperjs/core": "^2.9.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "body-scroll-lock": "^4.0.0-beta.0",
+    "bootstrap": "^5.1.0",
+    "hamburgers": "^1.1.3",
+    "hc-sticky": "^2.2.7",
+    "moment": "^2.29.4",
+    "moment-range": "^4.0.2",
+    "postcss": "^8.3.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -16,7 +25,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "jsonServer": "json-server --watch db.json --port 4000"
+    "jsonServer": "json-server --watch db.json --port 4000",
+    "dev": "SET NODE_ENV=development&& webpack --mode=development --progress --watch",
+    "prod": "SET NODE_ENV=production&& webpack --mode=production --progress",
+    "deploy": "webpack --mode=production --progress"
   },
   "eslintConfig": {
     "extends": [
@@ -37,13 +49,35 @@
     ]
   },
   "devDependencies": {
+    "@babel/cli": "^7.1.0",
+    "@babel/core": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query": "^4.32.5",
     "@tanstack/react-query-devtools": "^4.32.5",
+    "autoprefixer": "^10.4.8",
     "axios": "^1.4.0",
+    "babel-loader": "^9.1.0",
+    "css-loader": "^6.2.0",
+    "css-minimizer-webpack-plugin": "^4.0.0",
+    "dotenv-webpack": "^8.0.1",
+    "file-loader": "^6.2.0",
+    "glob-all": "^3.2.1",
+    "html-loader": "^4.2.0",
+    "html-webpack-plugin": "^5.5.0",
     "json-server": "^0.17.3",
+    "mini-css-extract-plugin": "^2.2.0",
+    "postcss-loader": "^7.0.0",
+    "purgecss-webpack-plugin": "^5.0.0",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
-    "react-router-dom": "^6.14.2"
+    "react-router-dom": "^6.14.2",
+    "sass": "^1.45.2",
+    "sass-loader": "^13.0.0",
+    "style-loader": "^3.2.1",
+    "webpack": "^5.51.1",
+    "webpack-cli": "^5.0.0",
+    "webpack-dev-server": "^4.0.0"
   }
 }
